--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,19 @@
 }
 
 .left{
-    background-color: #fff;
+    color: #fff;
     font-size: 22px;
+    display: grid;
+    text-align: center;
+    background-image: url("images/background.jpg");
+    background-size: cover;
+    height: 100vh;
+    width: 55vw;
+}
+
+.leftText{
     justify-self: center;
     align-self: center;
-    text-align: center;
 }
 
 .right{
@@ -57,6 +65,7 @@ input{
     border-radius: 5px;
     border: 1px solid rgb(213, 207, 207);
     font-size: 16px;
+    width: 100%;
 }
 
 input:focus{
@@ -74,23 +83,38 @@ input:valid:focus{
 }
 
 button[type="submit"]{
-    padding: 8px;
+    padding: 9px;
     font-size: 16px;
     border-radius: 5px;
     border: none;
     color: #fff;
-    background-color: #a78bfa;
-    margin-bottom: 10px;
+    background-color: #8f6fee;
+    margin-bottom: 14px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.253);
+}
+
+button[type="submit"]:hover{
+    background-color: #653ed8;
 }
 
 .submit a{
     text-decoration: none;
-    color: #a78bfa;
+    color: #8f6fee;
+}
+
+.submit a:hover{
+    color: #5828e9;
 }
 
 .submit p{
     font-size: 17px;
+}
+
+.error{
+    color: #7a5dcf;
+    font-size: 14px;
+    margin-top: 5px;
+  
 }
 
 
