Adding a black semi-transparent background color that enhances the readability of the text against the busy background image.

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 
 .left{
     color: #fff;
+    background-color: #5828e9;
     font-size: 22px;
     display: grid;
     text-align: center;
@@ -27,6 +28,8 @@
 .leftText{
     justify-self: center;
     align-self: center;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .right{
